--- a/AnimationPS/css/animationps.css
+++ b/AnimationPS/css/animationps.css
@@ -92,7 +92,12 @@
     background-color: rgba(0, 0, 0, 0.5);
 }
 
+.navbar[data-navbarps].burger-nav + div[data-burgerps]{
+    display: block;
+}
+
 .burger[data-burgerps]{
+    display: none;
     width: 50px;
     height: 50px;
     padding: 12px;
